<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <!--    <LinearLayout-->
    <!--        android:visibility="gone"-->
    <!--        android:id="@+id/logo_layout"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:layout_marginTop="@dimen/_5sdp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--        <ImageView-->
    <!--            android:id="@+id/icon"-->
    <!--            android:layout_width="@dimen/_30sdp"-->
    <!--            android:layout_height="@dimen/_30sdp"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:layout_margin="@dimen/_10sdp"-->
    <!--            android:src="@drawable/app_icon_png" />-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:fontFamily="@font/abril_fatface"-->
    <!--            android:text="@string/app_name"-->
    <!--            android:textColor="@color/colorBlack"-->
    <!--            android:textSize="20sp" />-->
    <!--    </LinearLayout>-->


    <ImageView
        android:id="@+id/banner_image"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/hapdel_original_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/logo_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_image">


        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/welcome_text"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/welcome_subtitle"
            android:textAlignment="viewStart"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_subtitle">


            <View
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"/>

            <Button
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="3"
                android:background="@drawable/login_btn"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />


            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"/>
            <Button
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="3"
                android:background="@drawable/login_btn"
                android:text="@string/action_register"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />


            <View
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/skip_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:visibility="gone"
            android:text="Skip SignIn"
            android:textColor="@color/com_facebook_blue" />

        <!--        <com.facebook.login.widget.LoginButton-->
        <!--            android:id="@+id/fb_login_button"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="@dimen/_100sdp"-->
        <!--            android:layout_gravity="center_horizontal"-->
        <!--            android:layout_margin="@dimen/_10sdp"-->
        <!--            android:visibility="invisible">-->

        <!--        </com.facebook.login.widget.LoginButton>-->


        <TextView
            android:id="@+id/terms_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/terms" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/bottom_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bottom_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>